# pytest-orm-boundaries

./: .gitignore  CHANGELOG.md  LICENSE  README.md  ROADMAP.md  pyproject.toml
.github/workflows/: publish.yml
benchmarks/: README.md  benchmark_query_overhead.py
examples/: boundaries.toml
examples/sample_project/: boundaries.toml  conftest.py  test_purchases.py
examples/sample_project/bookshop/: catalog.py  purchases.py  read_models.py  reports.py
examples/sample_project/bookshop/models/: __init__.py  book.py  client.py  purchase.py
examples/sqlalchemy_project/: boundaries.toml  conftest.py  test_purchases.py
examples/sqlalchemy_project/bookshop/: __init__.py  catalog.py  models.py  purchases.py  reports.py
src/pytest_orm_boundaries/: allows.py  build_report.py  call_stack.py  callstack.py  check_boundaries.py  config.py  crossings.py  django_guard.py  guard.py  ignores.py  model_resolution.py  plugin.py  prefetch_resolution.py  report.py  sql_parsing.py  sqlalchemy_guard.py  xdist_state.py
tests/: conftest.py  test_allows.py  test_build_report.py  test_call_stack.py  test_callstack.py  test_check_models.py  test_config.py  test_crossings.py  test_guard.py  test_ignores.py  test_load_aggregates.py  test_plugin.py  test_prefetch_resolution.py  test_report.py  test_sql_parsing.py
